<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/inputEmail_Register"
        android:layout_width="243dp"
        android:layout_height="60dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/inputEmailHint_Register"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/inputUsername_Register"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername_Register" />

    <EditText
        android:id="@+id/inputPassword_Register"
        android:layout_width="241dp"
        android:layout_height="64dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/inputPasswordHint_Register"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/inputEmail_Register"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail_Register" />

    <EditText
        android:id="@+id/inputUsername_Register"
        android:layout_width="237dp"
        android:layout_height="62dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/inputUsernameHint_Register"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputConfirmPassword_Register"
        android:layout_width="244dp"
        android:layout_height="67dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/inputConfirmPasswordHint_Register"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword_Register"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword_Register" />

    <Button
        android:id="@+id/buttonRegister_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="register"
        android:text="@string/btnRegister_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword_Register" />

    <Button
        android:id="@+id/buttonLogin_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="36dp"
        android:onClick="login"
        android:text="@string/btnLogin_Register"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister_Register"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister_Register" />
</androidx.constraintlayout.widget.ConstraintLayout>