<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/inputEmail_Login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="153dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/inputEmailHint_Login"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword_Login"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword_Login"
        app:layout_constraintStart_toStartOf="@+id/inputPassword_Login"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPassword_Login"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="454dp"
        android:ems="10"
        android:hint="@string/inputPasswordHint_Login"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail_Login" />

    <Button
        android:id="@+id/buttonLogin_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="33dp"
        android:text="@string/btnLogin_Login"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister_Login"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister_Login" />

    <Button
        android:id="@+id/buttonRegister_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:layout_marginBottom="264dp"
        android:text="@string/btnRegister_Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>